--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 notes/
+build/
+bin/
+obj/
+
+__pycache__/
+.pytest_cache/
+*.pyc
+
+.env
+venv
+
+*.pyd
+*.so
+
+hpc_core.cp313-win_amd64.pyd
+apps/vqe_molecule
+
