MPI integration completed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,27 @@ set(CMAKE_CUDA_STANDARD 17)
 
 find_package(Python 3.11 COMPONENTS Interpreter Development.Module REQUIRED)
 find_package(pybind11 REQUIRED)
+find_package(MPI REQUIRED)
 
-include_directories(include)
-
+# Define module
 pybind11_add_module(hpc_core 
     src/api/bridge.cpp 
     src/dispatcher/dispatcher.cpp
     src/classical/cuda/kernel.cu
 )
 
+# Configure hpc-core settings 
+target_include_directories(hpc_core PRIVATE include)
+# include_directories(${MPI_CXX_INCLUDE_PATH})
+target_include_directories(hpc_core PRIVATE ${MPI_CXX_INCLUDE_DIRS})
+
+# Links everything
 target_link_libraries(hpc_core PRIVATE Python::Module)
-set_target_properties(hpc_core PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)   
+target_link_libraries(hpc_core PRIVATE ${MPI_CXX_LIBRARIES})
+target_link_libraries(hpc_core PRIVATE pybind11::module)
+
+
+set_target_properties(hpc_core PROPERTIES 
+CUDA_RESOLVE_DEVICE_SYMBOLS ON
+CUDA_SEPARABLE_COMPILATION ON         #helps w complex kernels 
+)   
