--- a/environment.yml
+++ b/environment.yml
@@ -9,4 +9,12 @@ dependencies:
   - mpi4py
   - cupy
   - cmake
+  - pip
+  - numpy
+  - scipy
+  - pip: 
+      - qiskit>=1.0.0
+      - qiskit-aer>=0.14.0
+      - qiskit-algorithms>=0.3.0
+      - pylatexenc  
 
