succesful MPI integration and phase 2 testing complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(HybridStack LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 17)
+set(CMAKE_CUDA_ARCHITECTURES 80)
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
+set(CMAKE_CUDA_HOST_COMPILER ${CMAKE_CXX_COMPILER})
+
 
 find_package(Python 3.11 COMPONENTS Interpreter Development.Module REQUIRED)
 find_package(pybind11 REQUIRED)
@@ -18,15 +22,18 @@ pybind11_add_module(hpc_core
 # Configure hpc-core settings 
 target_include_directories(hpc_core PRIVATE include)
 # include_directories(${MPI_CXX_INCLUDE_PATH})
-target_include_directories(hpc_core PRIVATE ${MPI_CXX_INCLUDE_DIRS})
+# target_include_directories(hpc_core PRIVATE ${MPI_CXX_INCLUDE_DIRS})
 
 # Links everything
-target_link_libraries(hpc_core PRIVATE Python::Module)
-target_link_libraries(hpc_core PRIVATE ${MPI_CXX_LIBRARIES})
-target_link_libraries(hpc_core PRIVATE pybind11::module)
+target_link_libraries(hpc_core PRIVATE 
+    Python::Module 
+    MPI::MPI_CXX 
+    pybind11::module
+)
 
 
 set_target_properties(hpc_core PROPERTIES 
 CUDA_RESOLVE_DEVICE_SYMBOLS ON
 CUDA_SEPARABLE_COMPILATION ON         #helps w complex kernels 
+POSITION_INDEPENDENT_CODE ON
 )   
