--- a/environment.yml
+++ b/environment.yml
@@ -7,12 +7,14 @@ dependencies:
   - qiskit
   - pybind11
   - mpi4py
+  - mpich
   - cupy
   - cmake
   - pip
   - numpy
   - scipy
-  - pip: 
+  - matplotlib 
+  - pip:
       - qiskit>=1.0.0
       - qiskit-aer>=0.14.0
       - qiskit-algorithms>=0.3.0
